_sass/modules/_code.scss
@mixin code($bg: $mystic-grey, $fg: $atoll-blue) {
  @include monospace;
  background: $bg;
  color: $fg;
  font-size: .7em;
}

@mixin code-block {
  border-radius: .2em;
  line-height: 1.4em;
  padding: 1em;
  overflow-x: scroll;
}

@mixin code-inline {
  font-size: .8em;
  padding: .2em;
}

@mixin recolor-code($bg, $fg) {
  background: $bg;
  color: $fg;
}

